--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,31 @@ body {
   font-family: "Kaushan Script", cursive;
   background-image: url("/assets/images/jabby-background.jpg");
 }
+h1 {
+  font-size: 50px;
+}
 
 .container {
   background-color: pink;
+}
+
+.intro-holder p {
+  font-size: 25px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+button {
+  font-size: 30px;
+  padding: 10px;
+  padding-right: 20px;
+  background-color: rgb(250, 114, 136);
+  color: white;
+  border: 2px solid rgb(243, 41, 74);
+}
+#start-button:hover {
+  background-color: rgb(243, 32, 67);
+  color: bisque;
 }
 
 .answer-holder:hover {
